--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,14 +21,19 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install git+https://github.com/openai/whisper.git
+          pip install -U openai-whisper
           pip install pyinstaller
 
       - name: Build with PyInstaller
         run: |
-          pyinstaller --onefile main.py
+          pyinstaller --onefile --name whisper_auto2lrc main.py
 
       - name: Upload Release Asset
-        uses: softprops/action-gh-release@v2
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
         with:
-          files: dist/main.exe
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./dist/whisper_auto2lrc.exe
+          asset_name: whisper_auto2lrc.exe
+          asset_content_type: application/octet-stream
